FIX: increasing z-index on topic-avatar

--- a/app/assets/stylesheets/desktop/topic-post.scss
+++ b/app/assets/stylesheets/desktop/topic-post.scss
@@ -623,7 +623,7 @@ $topic-avatar-width: 45px;
   padding-top: 15px;
   width: $topic-avatar-width;
   float: left;
-  z-index: z("base");
+  z-index: z("base") + 1;
 }
 
 .gap {
